crates/vize_croquis_cf/src/diagnostics/tests/snapshots/vize_croquis_cf__diagnostics__tests__markdown__severity_badges-3.snap
---
source: crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/markdown.rs
expression: markdown.as_str()
---
**INFO** `vize:croquis/cf/unmatched-inject`

### test
