crates/vize_croquis_cf/src/diagnostics/tests/snapshots/vize_croquis_cf__diagnostics__tests__markdown__severity_badges.snap
---
source: crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/markdown.rs
expression: markdown.as_str()
---
**ERROR** `vize:croquis/cf/unmatched-inject`

### test
